<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:text="@string/banner"
        android:textSize="24sp" />

    <Button
        android:id="@+id/app1_button"
        style="@style/custom_button"
        android:onClick="onClick"
        android:text="@string/app_name1" />

    <Button
        android:id="@+id/app2_button"
        style="@style/custom_button"
        android:onClick="onClick"
        android:text="@string/app_name2" />


    <Button
        android:id="@+id/app3_button"
        style="@style/custom_button"
        android:onClick="onClick"
        android:text="@string/app_name3" />


    <Button
        android:id="@+id/app4_button"
        style="@style/custom_button"
        android:onClick="onClick"
        android:text="@string/app_name4" />

    <Button
        android:id="@+id/app5_button"
        style="@style/custom_button"
        android:onClick="onClick"
        android:text="@string/app_name5" />

    <Button
        android:id="@+id/app6_button"
        style="@style/custom_button"
        android:background="#ff0000"
        android:onClick="onClick"
        android:text="@string/app_name6" />
</LinearLayout>
